--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ File: index.html (Gate v1.2)
       </blockquote>
 
       <nav class="keys" aria-label="Entry choices">
-        <a class="key key--codex" href="/codex/" aria-label="Enter the Codex">Enter the Codex</a>
-        <a class="key key--city" href="/city/" aria-label="Enter the City">Enter the City</a>
-        <a class="key key--hive" href="/hive/" aria-label="Enter the Hive">Enter the Hive</a>
+       <a class="key key--codex" href="codex/">Enter the Codex</a>
+       <a class="key key--city"  href="city/">Enter the City</a>
+       <a class="key key--hive"  href="hive/">Enter the Hive</a>
       </nav>
 
       <div class="micro" role="note" style="margin-top:4px">Ceremonial Gate v1.2 • Refined eagle • Hive portal added.</div>
